<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:focusableInTouchMode="true">
    
	<LinearLayout
	    android:id="@+id/search_panel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
        <com.osmnavigator.AutoCompleteOnPreferences
            android:id="@+id/editDeparture"
			android:hint="@string/my_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1" 
            android:completionThreshold="1" />
		<Button
			android:id="@+id/buttonSearchDep"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_weight="0"
			android:text="@string/search" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
        <com.osmnavigator.AutoCompleteOnPreferences
            android:id="@+id/editDestination"
			android:hint="@string/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1" 
            android:completionThreshold="1" />
		<Button
			android:id="@+id/buttonSearchDest"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_weight="0"
			android:text="@string/search" />
	</LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<AutoCompleteTextView
			android:id="@+id/poiTag"
			android:hint="@string/feature"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="left" 
			android:completionThreshold="1"/>
		<Button
			android:id="@+id/buttonSetPOITag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_weight="0"
			android:text="@string/search" />
	</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/expander"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:background="@drawable/expander_bgrnd" >
		<TextView
			android:id="@+id/routeInfo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="left" 
			android:textColor="#FF000000" 
			android:textSize="20dp" />
		<TextView
			android:id="@+id/speed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:layout_gravity="right" 
			android:textColor="#FF000000" 
			android:textSize="20dp" />
	</LinearLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
		<org.osmdroid.bonuspack.mapsforge.GenericMapView android:id="@+id/map"
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent" />
        <Button
            android:id="@+id/buttonTrackingMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_tracking_off" />

		<Button
			android:id="@+id/buttonFriends"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true"
			android:background="@drawable/btn_sharing"/>
	</RelativeLayout>

</LinearLayout>
